syntax = "proto3";

package access_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/Arkosh744/auth-grpc/pkg/access_v1;access_v1";

service AccessV1  {
  rpc CheckAccess(CheckAccessRequest) returns (google.protobuf.Empty) {}
}

message CheckAccessRequest {
  string endpoint = 1;
}
